# docs/openapi.yaml
@@ -161,6 +161,13 @@ components:
       value:
         id: 1
         name: Pankejki a'la Gosia
+        ingredients:
+          - quantity: 400
+            unit: g
+            name: mąki
+          - quantity: 1
+            unit: łyżeczka
+            name: cukru
         description: Wrzuć wszystko do miski, wymieszaj, wylej na patelnię, przekręć jak się zarumieni i gotowe. :D
     recipeId:
       value:
@@ -224,6 +231,22 @@ components:
         name:
           description: Nazwa przepisu
           type: string
+        ingredients:
+          description: Składniki przepisu
+          type: array
+          items:
+            description: Składnik przepisu
+            type: object
+            properties:
+              quantity:
+                description: Ilość składnika przepisu
+                type: number
+              unit:
+                description: Jednostka składnika przepisu
+                type: string
+              name:
+                description: Nazwa składnika przepisu
+                type: string
         description:
           description: Opis przepisu
           type: string
